[package]
name = "pqs_text_crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
oqs = { version = "0.11.0", features = ["vendored"] }
oqs-sys = { version = "0.11.0", features = ["vendored"] }

clap = { version = "4.5", features = ["derive"] }

aes-gcm = "0.10.3"           
rand = "0.9.2"              
generic-array = "1.2.0"
